# language-models-experiments

./: .gitignore  MODELS.md  README.md  clearml.local.conf.example  config.toml  docker-compose.clearml.yml  pyproject.toml
language_models_experiments/corpora/: __init__.py  registry.py
scripts/: babylm_2026_strict_small_stats.py  corpus_stats.py
src/: __init__.py
src/cli/: __init__.py  config.py  corpus_stats.py  data_splits.py  evaluate.py  model_training.py  output.py  pipeline.py  pipeline_common.py  pipeline_stage_support.py  pipeline_steps.py  query.py  stage_pipeline_steps.py  staging.py  tokenizer_pipeline.py  tokenizer_training.py  train.py  train_bigram.py  train_sentencepiece.py
src/corpora/: babylm_2026_strict_small.py  normalization.py  registry.py  splits.py  stats.py  text.py  tinystories.py
src/language_models_experiments/: __init__.py
src/language_models_experiments/cli/: corpus_stats.py
src/language_models_experiments/corpora/: babylm_2026_strict_small.py
src/models/: __init__.py  bigram.py  definition.py  formatting.py  ngram.py  registry.py  trigram.py  trigram_absolute_discount.py  trigram_common.py  trigram_kneser_ney.py
src/tokenizers/: __init__.py  sentencepiece_training.py
src/tracking/: clearml.py
